open auth is set to false

--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   branch: main
   repo: comet-coding/cms-public-repo
-
+  open_authoring: false
   commit_messages:
     create: 'Create {{collection}} “{{slug}}”'
     update: 'Update {{collection}} “{{slug}}”'
